[workspace]
members = [
    "permanent-delegate",
    "default-account-state",
    "interest-bearing-tokens",
    "non-transferable-token",
    "immutable-owner",
    "token-metadata",
    "transfer-fees",
    "reallocate-instruction",
    "required-memo",
]

resolver = "2"

[workspace.package]
authors = ["448-OG <superuser@448a.frica>"]
version = "0.1.0"
edition = "2021"
license = "CCO-1.0 OR APACHE-2.0"
publish = false

[workspace.dependencies]
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
solana-program = "2.0.1"
borsh = { version = "1.5.1", features = ["derive", "bytes"] }
spl-associated-token-account = { version = "4.0.0", features = [
    "no-entrypoint",
] }
spl-transfer-hook-interface = { version = "0.7.0" }
spl-token-metadata-interface = "0.4.0"
spl-type-length-value = "0.5.0"
solana-transaction-status = "2.0.2"
solana-client = "2.0.2"
solana-sdk = "2.0.2"
solana-account-decoder = "2.0.3"
