[package]
name = "immutable-owner-extension"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
spl-token-2022.workspace = true
solana-program.workspace = true
spl-associated-token-account.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
