[package]
name = "transfer-hooks"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
spl-token-2022.workspace = true
spl-associated-token-account.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
spl-tlv-account-resolution.workspace = true
spl-transfer-hook-interface.workspace = true
spl-discriminator.workspace = true
tokio = { version = "*", features = ["full"] }
solana-program.workspace = true
